--- a/src/app.scss
+++ b/src/app.scss
@@ -173,3 +173,63 @@ $button_border_radius: 5px;
         
     }
 }
+
+.container-padding {
+    display: flex;
+    padding: $spacing $spacing;
+
+
+}
+
+.wrapper-img-survey, .wrapper-feed-img {
+    width: 50%;
+    img {
+        width: 100%;
+    }
+}
+
+.wrapper-text-feed {
+    width: 50%;
+    h3 {
+        margin-bottom: $spacing;
+    }
+    p {
+        margin-bottom: $spacing / 2;
+        width: 45%;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    img {
+        margin-top: $spacing / 2;
+    }
+
+}
+
+
+.surveys {
+    
+    .wrapper-text-feed {
+        padding-left: 15%;
+        p {
+            width: 100%;
+        }
+        .wrapper-feed-img {
+            width: 85%;
+            img {
+                width: 100%;
+            }
+        }
+        
+    }
+    .wrapper-img-survey {
+        width: 50%;
+        img {
+            width: 100%;
+        }
+    }
+    
+}
+
