--- a/src/app.scss
+++ b/src/app.scss
@@ -1,13 +1,24 @@
 $font-family: 'Open Sans', sans-serif;
-$primary_color: #4B4A5A;
-$secondary_color: #58402d;
-
-$background_color: #f6e2d5;
-$hover: #d7a43d;
-$spacing: 20px;
 $font-size: 14px;
+$line_height: 2.5;
+
+// $primary_color: #4B4A5A;
+// $secondary_color: #ac5440;
+// $background_color: #f6e2d5;
+// $hover: #d7a43d;
+
+//cambio Palette
+$primary_color: #3e14e9;
+$secondary_color: #0e14ee;
+$background_color: #0414b3;
+$hover:#7f14d4;
+
+
+$spacing: 20px;
+
 $primary_color_Button: #0414B3;
 $hover_Button: #0e14ee;
+
 $button_border_radius: 5px;
 
 @use 'sass:math';
@@ -59,6 +70,7 @@ $button_border_radius: 5px;
         p {
             vertical-align: middle;
             display: inline-block;
+            cursor: pointer;
             font-weight: bold;
             font-size: $font-size - 2px;
 
@@ -74,6 +86,8 @@ $button_border_radius: 5px;
     .wrapper-section-hero-title  {
         .paragraph-small {
             font-size: $font-size - 4px;
+            color: $secondary_color;
+            cursor: pointer;
         }
         span {
             font-size: $font-size - 4px;
@@ -91,7 +105,7 @@ $button_border_radius: 5px;
         max-width: 920px;
         h3 {
             margin: $spacing 0 ($spacing * 2);
-            color: $secondary_color;
+            color: $primary_color;
 
         }
     
@@ -132,7 +146,7 @@ $button_border_radius: 5px;
             margin: $spacing auto ($spacing * 2);
             font-weight: bold;
             width: 590px;
-            color: $secondary_color;
+            color: $primary_color;
         }
     
         .img-after-wrapper {
@@ -241,12 +255,16 @@ $button_border_radius: 5px;
     font-size: $font-size;
     .text-align {
         text-align: center;
+        .paragraph-small {
+            cursor: pointer;
+            color: $secondary_color;
+        }
     }
     background-color: $background_color;
     padding: ($spacing * 2) 0;
     h1 {
         font-size: $font-size * 2;
-        color: $secondary_color ;
+        color: $primary_color;
         margin-bottom: $spacing;
         margin-top: $spacing;
     }
@@ -258,6 +276,11 @@ $button_border_radius: 5px;
         margin: 0 auto;
         padding: $spacing;
         border: 1px solid $primary_color_Button;
+        p {
+            margin-bottom: $spacing;
+            color:$primary_color;
+            
+        }
         span {
            
             img{
@@ -299,6 +322,7 @@ $button_border_radius: 5px;
             display: inline-block;
             font-weight: bold;
             font-size: $font-size - 2px;
+            cursor: pointer;
 
         }
         &:hover {
@@ -308,6 +332,7 @@ $button_border_radius: 5px;
         }
         
     }
+
 }
 
 
@@ -358,7 +383,7 @@ footer.container {
                                 text-decoration: none;
                                 color: $secondary_color;
                                 font-weight: bold;
-                                line-height: 30px;
+                                line-height: $line_height;
                                 font-size: 12px;
                             }
                         }
@@ -370,6 +395,7 @@ footer.container {
                     margin: 0 auto;
                     h3 {
                         margin-bottom: $spacing * 2;
+                        color: $secondary_color;
                     }
                     ul {
                         list-style: none;
@@ -378,7 +404,7 @@ footer.container {
                                 text-decoration: none;
                                 color: $secondary_color;
                              
-                                line-height: 30px;
+                                line-height: $line_height;
                                 font-size: 12px;
                                 font-weight: bold;
 
