--- a/src/app.scss
+++ b/src/app.scss
@@ -1,420 +1,29 @@
-$font-family: 'Open Sans', sans-serif;
-$font-size: 14px;
-$line_height: 2.5;
-
-// $primary_color: #4B4A5A;
-// $secondary_color: #ac5440;
-// $background_color: #f6e2d5;
-// $hover: #d7a43d;
-
-//cambio Palette
-$primary_color: #3e14e9;
-$secondary_color: #0e14ee;
-$background_color: #0414b3;
-$hover:#7f14d4;
-
-
-$spacing: 20px;
-
-$primary_color_Button: #0414B3;
-$hover_Button: #0e14ee;
-
-$button_border_radius: 5px;
-
 @use 'sass:math';
+
+@import "partials/variables";
+
+
 @import "partials/commons";
 @import "partials/header";
-
-.section-hero {
-    display: flex;
-    margin: $spacing auto;
-    .wrapper-section-hero-title {
-        width: 50%;
-    }
-    .img-illustration-main {
-        width: 50%;
-    
-        img {
-            width: 100%;
-        }
-    }
-
-    h1 {
-        color:$secondary_color;
-        font-size: ($font-size * 2);
-        font-weight: bold;
-    
-        margin-bottom: math.div($spacing, 3);
-    }
-
-    h3 {
-        font-size: $font-size;
-        font-weight: bold;
-        color:$secondary_color;
-        margin-bottom: $spacing * 2;
-    }
-
-    button {
-        margin-bottom: $spacing;
-        padding: math.div($spacing, 4);
-    
-        border-radius: $button_border_radius;
-        border: 1px solid $primary_color_Button;
-        color: #fff;
-        background-color:$primary_color_Button;
-
-        img {
-            width: $spacing;
-            vertical-align: middle;
-        }
-        p {
-            vertical-align: middle;
-            display: inline-block;
-            cursor: pointer;
-            font-weight: bold;
-            font-size: $font-size - 2px;
-
-        }
-        &:hover {
-            color: #fff;
-            border: 1px solid $hover_Button;
-            background-color: $hover_Button;
-        }
-        
-    }
-    
-    .wrapper-section-hero-title  {
-        .paragraph-small {
-            font-size: $font-size - 4px;
-            color: $secondary_color;
-            cursor: pointer;
-        }
-        span {
-            font-size: $font-size - 4px;
-        }
-    }
-}
-.wrapper-section-before {
-    background-color: $background_color;
-
-    .section-before {
-        padding: ($spacing + 20px) 0;
-        text-align: center;
-        margin: $spacing auto 0;
-        border-bottom: 1px solid $secondary_color;
-        max-width: 920px;
-        h3 {
-            margin: $spacing 0 ($spacing * 2);
-            color: $primary_color;
-
-        }
-    
-        .img-before-wrapper {
-            width: $spacing * 13;
-            margin: ($spacing * 3) auto ($spacing * 2);
-            img {
-                width: 100%;
-            }
-    
-        }
-        .icons-wrapper {
-            display: flex;
-            justify-content: space-around;
-
-            div {
-                width: $spacing * 5;
-                img {
-                    width: 100%;
-                }
-
-            }
-        }
-        
-    }
-}
-
-.wrapper-section-after {
-    background-color: $background_color;
-
-    .section-after {
-        text-align: center;
-        margin: 0 auto;
-        max-width: 920px;
-        padding: ($spacing * 2) 0;
-
-        h3 {
-            margin: $spacing auto ($spacing * 2);
-            font-weight: bold;
-            width: 590px;
-            color: $primary_color;
-        }
-    
-        .img-after-wrapper {
-            width: $spacing * 13;
-            text-align: center;
-            margin: ($spacing * 3) auto ($spacing * 2);
-            img {
-                width: 100%;
-            }
-    
-        }
-        .icons-wrapper {
-            display: flex;
-            justify-content: space-around;
-            align-items: baseline;
-
-            div {
-                img {
-                    width: $spacing * 5;
-                }
-                margin-bottom: $spacing + 10px;
-            }
-
-            div:last-of-type {
-                img {
-                    width: $spacing * 2;
-                }
-                
-            }
-            div {
-                p{
-                    font-size: $font-size - 4px;
-                    color: $secondary_color;
-                }
-            }
-
-        }
-        
-    }
-}
-
-.container-padding {
-    display: flex;
-    padding: $spacing $spacing;
-
-
-}
-
-.wrapper-img-survey, .wrapper-feed-img {
-    width: 50%;
-    img {
-        width: 100%;
-    }
-}
-
-.wrapper-text-feed {
-    width: 50%;
-    h3 {
-        margin-bottom: $spacing;
-    }
-    p {
-        margin-bottom: $spacing / 2;
-        width: 45%;
-    }
-
-    a {
-        text-decoration: none;
-    }
-
-    img {
-        margin-top: $spacing / 2;
-    }
-
-}
-
-
-.surveys {
-    
-    .wrapper-text-feed {
-        padding-left: 15%;
-        p {
-            width: 100%;
-        }
-        .wrapper-feed-img {
-            width: 85%;
-            img {
-                width: 100%;
-            }
-        }
-        
-    }
-    .wrapper-img-survey {
-        width: 50%;
-        img {
-            width: 100%;
-        }
-    }
-    
-}
+@import "partials/sectionHero";
+@import "partials/wrapperSectionBefore";
+@import "partials/wrapperSectionAfter";
+@import "partials/insights";
+@import "partials/wrapTeamBit";
+@import "partials/footer";
 
 
 
-//sezione prima di footer 
-.wrapper-teambit {
-    color: $secondary_color;
-    font-size: $font-size;
-    .text-align {
-        text-align: center;
-        .paragraph-small {
-            cursor: pointer;
-            color: $secondary_color;
-        }
-    }
-    background-color: $background_color;
-    padding: ($spacing * 2) 0;
-    h1 {
-        font-size: $font-size * 2;
-        color: $primary_color;
-        margin-bottom: $spacing;
-        margin-top: $spacing;
-    }
-
-    .panel {
-        border-radius: 10px;
-        background-color: #fff;
-        width: 50%;
-        margin: 0 auto;
-        padding: $spacing;
-        border: 1px solid $primary_color_Button;
-        p {
-            margin-bottom: $spacing;
-            color:$primary_color;
-            
-        }
-        span {
-           
-            img{
-                width: 50px;
-                &:first-of-type {
-                    margin-right: $spacing;
-                }
-            }
-            
-            
-        }
-        div {
-            margin-top: $spacing / 2;
-            display: flex;
-            align-items: center;
-            .authors {
-                display: inline-block;
-                font-size: $font-size - 3px;
-    
-            }
-        }
-    }
-
-    button {
-        margin: $spacing 0;
-        padding: math.div($spacing, 4);
-    
-        border-radius: $button_border_radius;
-        border: 1px solid $primary_color_Button;
-        color: #fff;
-        background-color:$primary_color_Button;
-
-        img {
-            width: $spacing;
-            vertical-align: middle;
-        }
-        p {
-            vertical-align: middle;
-            display: inline-block;
-            font-weight: bold;
-            font-size: $font-size - 2px;
-            cursor: pointer;
-
-        }
-        &:hover {
-            color: #fff;
-            border: 1px solid $hover_Button;
-            background-color: $hover_Button;
-        }
-        
-    }
-
-}
 
 
 
-//footer 
 
-footer.container {
-    margin-top: $spacing * 3;
-    .row-footer {
-        display: flex;
-        .col-4-wrapper {
-            width: 33.33333333%;
-            display: flex;
-            padding-right: 15px;
-            padding-left: 15px;
-            img {
-                width: 50px;
-            }
-            h4 {
-                margin-left: 5%;
-                color: $secondary_color;
-                line-height: 25px;
 
-                span {
-                    color: $primary_color_Button;
-                    font-size: 10px;
-                }
-            }
-        }
-        .col-8 {
-            width: 66.66666667%;
-            .row {
-                display: flex;
-                margin: 0 auto;
-                .col-2 {
-                    width: calc((100% / 12) * 2);
-                  
-                    margin: 0 auto;
-                    h3 {
-                        color: $secondary_color;
-                        margin-bottom: $spacing * 2;
-                        font-weight: bolder;
-                    }
-                    ul {
-                        list-style: none;
-                        li {
-                            a {
-                                text-decoration: none;
-                                color: $secondary_color;
-                                font-weight: bold;
-                                line-height: $line_height;
-                                font-size: 12px;
-                            }
-                        }
-                    }
-                }
-                .col-3 {
-                    width: 25%;
-                    
-                    margin: 0 auto;
-                    h3 {
-                        margin-bottom: $spacing * 2;
-                        color: $secondary_color;
-                    }
-                    ul {
-                        list-style: none;
-                        li {
-                            a {
-                                text-decoration: none;
-                                color: $secondary_color;
-                             
-                                line-height: $line_height;
-                                font-size: 12px;
-                                font-weight: bold;
 
-                            }
-                        }
-                    }
 
-                }
-            }
-        }
-    }
-    
-}
+
+
+
+
+
+
