hamburger menu and onClick

--- a/src/partials/_wrapperSectionAfter.scss
+++ b/src/partials/_wrapperSectionAfter.scss
@@ -10,7 +10,7 @@
         h3 {
             margin: $spacing auto ($spacing * 2);
             font-weight: bold;
-            width: 590px;
+            width: 54%;
             color: $primary_color;
         }
     
