--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,6 @@
 @use 'sass:math';
 
+
 @import "partials/variables";
 
 
@@ -13,7 +14,56 @@
 @import "partials/footer";
 
 
+.hidden-xs {
+    display: none;
+}
+@media (min-width: 767.9px) {
 
+    .visible-sm-inline-block {
+        display: inline-block;
+    }
+    .hidden-sm {
+        display: none;
+    }
+}
+
+@media (max-width: 767.9px) {
+    .visible-xs-inline-block {
+        display: inline-block;
+        margin: 0 20px;
+        color: $secondary_color;
+    }
+}
+
+
+//hamburger menu 
+@media all and (max-width: 767.9px) {
+    header nav ul .topnav.responsive {
+        position: relative;
+    }
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    ul#myTopnav {
+        position: absolute;
+        top: 45px;
+        right: 33px;
+
+        li {
+            list-style: none;
+            a {
+                display: block;
+                text-align: left;
+                text-decoration: none;
+                color:$primary_color;
+                
+            }
+        }
+    }
+    
+}
 
 
 
