--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -12,49 +12,55 @@ header {
                 width: 100%;
             }
         }
-    
-        ul {
-            display: flex;
-            list-style: none;
-            align-items: center;
-            li {
-                display: inline-block;
-                margin: 0 $spacing;
-                a {
-                    text-decoration:none;
-                    color: $secondary_color;
-                    font-weight: bolder;
-                    &:hover {
-                        color: $hover;
-                        transition: color .3s;
-                    }
-                }
-    
-                button {
-                
-                    padding: math.div($spacing, 3);
-                    margin: math.div($spacing, 2) 0;
-                    
-                    border-radius: $button_border_radius;
-                    border: 1px solid $primary_color_Button;
-                    color: $primary_color_Button;
-                    background-color: #fff;
-                    img {
-                        width: $spacing;
-                        display: inline-block;
-                        vertical-align: middle;
-                    }
-                    a {
-                        vertical-align: middle;
-                        display: inline-block;
-                        text-decoration: none;
+        @media (min-width: 767.9px) {
 
+            ul {
+                display: flex;
+                list-style: none;
+                align-items: center;
+    
+                
+                li {
+                    display: inline-block;
+                    margin: 0 $spacing;
+                    a {
+                        text-decoration:none;
+                        color: $secondary_color;
+                        font-weight: bolder;
+                        &:hover {
+                            color: $hover;
+                            transition: color .3s;
+                        }
                     }
-                    &:hover {
-                        color: $hover_Button;
-                        border: 1px solid $hover_Button;
-                    }
+        
+                    
                 }
+            }
+        }
+
+        button {
+                    
+            padding: math.div($spacing, 3);
+            margin: math.div($spacing, 2) 0;
+            
+            border-radius: $button_border_radius;
+            border: 1px solid $primary_color_Button;
+            color: $primary_color_Button;
+            background-color: #fff;
+            img {
+                width: $spacing;
+                display: inline-block;
+                vertical-align: middle;
+            }
+            a {
+                vertical-align: middle;
+                display: inline-block;
+                text-decoration: none;
+
+            }
+            &:hover {
+                color: $hover_Button;
+                border: 1px solid $hover_Button;
             }
         }
     }
