--- a/src/app.scss
+++ b/src/app.scss
@@ -17,6 +17,7 @@
 .hidden-xs {
     display: none;
 }
+
 @media (min-width: 767.9px) {
 
     .visible-sm-inline-block {
@@ -27,25 +28,18 @@
     }
 }
 
-@media (max-width: 767.9px) {
+
+//hamburger menu smartphone
+@media all and (max-width: 767.9px) {
     .visible-xs-inline-block {
         display: inline-block;
         margin: 0 20px;
         color: $secondary_color;
     }
-}
-
-
-//hamburger menu 
-@media all and (max-width: 767.9px) {
     header nav ul .topnav.responsive {
         position: relative;
     }
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
+    
     ul#myTopnav {
         position: absolute;
         top: 45px;
@@ -64,6 +58,8 @@
     }
     
 }
+
+
 
 
 
