--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -1,80 +1,121 @@
 //footer 
 footer.container {
     margin-top: $spacing * 3;
-    .row-footer {
-        display: flex;
-        .col-4-wrapper {
-            width: 33.33333333%;
+    @media all and (min-width:768px) {
+
+        .row-footer {
             display: flex;
-            padding-right: 15px;
-            padding-left: 15px;
-            img {
-                width: 50px;
-            }
-            h4 {
-                margin-left: 5%;
-                color: $secondary_color;
-                line-height: 25px;
-
-                span {
-                    color: $primary_color_Button;
-                    font-size: 10px;
-                }
-            }
-        }
-        .col-8 {
-            width: 66.66666667%;
-            .row {
+            .col-4-wrapper {
+                width: 33.33333333%;
                 display: flex;
-                margin: 0 auto;
-                .col-2 {
-                    width: calc((100% / 12) * 2);
-                  
-                    margin: 0 auto;
-                    h3 {
-                        color: $secondary_color;
-                        margin-bottom: $spacing * 2;
-                        font-weight: bolder;
-                    }
-                    ul {
-                        list-style: none;
-                        li {
-                            a {
-                                text-decoration: none;
-                                color: $secondary_color;
-                                font-weight: bold;
-                                line-height: $line_height;
-                                font-size: 12px;
-                            }
-                        }
+                padding-right: 15px;
+                padding-left: 15px;
+                img {
+                    width: 50px;
+                }
+                h4 {
+                    margin-left: 5%;
+                    color: $secondary_color;
+                    line-height: 25px;
+    
+                    span {
+                        color: $primary_color_Button;
+                        font-size: 10px;
                     }
                 }
-                .col-3 {
-                    width: 25%;
-                    
-                    margin: 0 auto;
-                    h3 {
-                        margin-bottom: $spacing * 2;
-                        color: $secondary_color;
-                    }
-                    ul {
-                        list-style: none;
-                        li {
-                            a {
-                                text-decoration: none;
-                                color: $secondary_color;
-                             
-                                line-height: $line_height;
-                                font-size: 12px;
-                                font-weight: bold;
-
+            }
+            @media all and (min-width:768px) {
+                .col-8 {
+                    width: 66.66666667%;
+                    .row {
+                        display: flex;
+                        margin: 0 auto;
+        
+                        @media all and (min-width:768px) {
+                            .col-2 {
+                                width: calc((100% / 12) * 2);
+                              
+                                margin: 0 auto;
+                                h3 {
+                                    color: $secondary_color;
+                                    margin-bottom: $spacing * 2;
+                                    font-weight: bolder;
+                                }
+                                ul {
+                                    list-style: none;
+                                    li {
+                                        a {
+                                            text-decoration: none;
+                                            color: $secondary_color;
+                                            font-weight: bold;
+                                            line-height: $line_height;
+                                            font-size: 12px;
+                                        }
+                                    }
+                                }
                             }
                         }
+                        
+                        @media all and (min-width:768px) {
+                            .col-3 {
+                                width: 25%;
+                                
+                                margin: 0 auto;
+                                h3 {
+                                    margin-bottom: $spacing * 2;
+                                    color: $secondary_color;
+                                }
+                                ul {
+                                    list-style: none;
+                                    li {
+                                        a {
+                                            text-decoration: none;
+                                            color: $secondary_color;
+                                         
+                                            line-height: $line_height;
+                                            font-size: 12px;
+                                            font-weight: bold;
+            
+                                        }
+                                    }
+                                }
+            
+                            }
+                        }
+                        
                     }
+                }
+            }
+            
+        }
+    }
+    
+}
 
+@mixin anchors {
+    text-decoration: none;
+    color: $secondary_color;
+    line-height: $line_height;
+    font-size: 12px;
+    font-weight: bold;
+}
+    .col-8, .col-4-wrapper {
+        padding: 0 20px;
+        h3 {
+            margin: $spacing * 2 0;
+            color: $secondary_color;
+        }
+        ul {
+            list-style: none;
+            li {
+                a {
+                    @include anchors;
+    
                 }
             }
         }
     }
     
-}
+
+
+
