--- a/src/partials/_insights.scss
+++ b/src/partials/_insights.scss
@@ -1,63 +1,96 @@
 .container-padding {
-    display: flex;
-    padding: $spacing $spacing;
+    display: block;
+    margin: 0 auto;
 }
-
-.wrapper-img-survey, .wrapper-feed-img {
+.wrapper-feed-img {
     width: 50%;
     img {
         width: 100%;
     }
 }
-
+.wrapper-img-survey {
+    width: 70%;
+    img {
+        width: 100%;
+    }
+}
 .wrapper-text-feed {
-    width: 50%;
-    h3 {
-        margin-bottom: $spacing;
-        color: $primary_color;
-    }
-    p {
-        margin-bottom: $spacing / 2;
-        width: 45%;
-        color: $secondary_color;
-    }
-
     a {
         text-decoration: none;
         color: $secondary_color;
-        &:hover {
-            color: lighten($color: $hover, $amount: 10)
-        }
     }
-
-    img {
-        margin-top: $spacing / 2;
-    }
-
 }
 
+@media all and (min-width:768px) {
 
-.surveys {
-    
-    .wrapper-text-feed {
-        padding-left: 15%;
-        p {
+    .container-padding {
+        display: flex;
+        padding: $spacing $spacing;
+    }
+}
+@media all and (min-width:768px) {
+
+    .wrapper-img-survey, .wrapper-feed-img {
+        width: 50%;
+        img {
             width: 100%;
+        }
+    }
+}
+@media all and (min-width:768px) {
+
+    .wrapper-text-feed {
+        width: 50%;
+        h3 {
+            margin-bottom: $spacing;
+            color: $primary_color;
+        }
+        p {
+            margin-bottom: $spacing / 2;
+            width: 45%;
             color: $secondary_color;
         }
-        .wrapper-feed-img {
-            width: 85%;
+    
+        a {
+            text-decoration: none;
+            color: $secondary_color;
+            &:hover {
+                color: lighten($color: $hover, $amount: 10)
+            }
+        }
+    
+        img {
+            margin-top: $spacing / 2;
+        }
+    
+    }
+}
+
+@media all and (min-width:768px) {
+
+    .surveys {
+        
+        .wrapper-text-feed {
+            padding-left: 15%;
+            p {
+                width: 100%;
+                color: $secondary_color;
+            }
+            .wrapper-feed-img {
+                width: 85%;
+                img {
+                    width: 100%;
+                }
+            }
+            
+        }
+        .wrapper-img-survey {
+            width: 50%;
             img {
                 width: 100%;
             }
         }
         
     }
-    .wrapper-img-survey {
-        width: 50%;
-        img {
-            width: 100%;
-        }
-    }
-    
 }
+
